Initial commit WS 1.1 Car

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /WS1_1_Car/obj
+/WS1_1_Car/bin/Debug/netcoreapp2.1
+/.vs
