Initial commit WS2 Cars

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /WS1_1_Car/obj
 /WS1_1_Car/bin/Debug/netcoreapp2.1
 /.vs
+/WS2_Car/obj/Debug/netcoreapp2.1
+/WS2_Car/obj/Release/netcoreapp2.1
+/WS2_Car/obj
+/WS2_Cars/bin/Debug/netcoreapp2.1
+/WS2_Cars/obj/Debug/netcoreapp2.1
+/WS2_Cars/obj
