--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@
 /WS2_Cars/bin/Debug/netcoreapp2.1
 /WS2_Cars/obj/Debug/netcoreapp2.1
 /WS2_Cars/obj
+/WS3_Cars_With_List/bin/Debug/netcoreapp2.1
+/WS3_Cars_With_List/obj
