Initial commit WS 4 Cars Static

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,21 @@
 /WS2_Cars/obj
 /WS3_Cars_With_List/bin/Debug/netcoreapp2.1
 /WS3_Cars_With_List/obj
+/WS4_Cars_Static/bin/Debug/netcoreapp2.1/WS4_Cars_Static.deps.json
+/WS4_Cars_Static/bin/Debug/netcoreapp2.1/WS4_Cars_Static.dll
+/WS4_Cars_Static/bin/Debug/netcoreapp2.1/WS4_Cars_Static.pdb
+/WS4_Cars_Static/bin/Debug/netcoreapp2.1/WS4_Cars_Static.runtimeconfig.dev.json
+/WS4_Cars_Static/bin/Debug/netcoreapp2.1/WS4_Cars_Static.runtimeconfig.json
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.AssemblyInfo.cs
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.pdb
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.dll
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.csprojAssemblyReference.cache
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.csproj.FileListAbsolute.txt
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.csproj.CoreCompileInputs.cache
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.assets.cache
+/WS4_Cars_Static/obj/Debug/netcoreapp2.1/WS4_Cars_Static.AssemblyInfoInputs.cache
+/WS4_Cars_Static/obj/WS4_Cars_Static.csproj.nuget.g.targets
+/WS4_Cars_Static/obj/WS4_Cars_Static.csproj.nuget.g.props
+/WS4_Cars_Static/obj/WS4_Cars_Static.csproj.nuget.dgspec.json
+/WS4_Cars_Static/obj/WS4_Cars_Static.csproj.nuget.cache
+/WS4_Cars_Static/obj/project.assets.json
