Initial commit WS5 Cars Inheritance

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@
 /WS4_Cars_Static/obj/WS4_Cars_Static.csproj.nuget.dgspec.json
 /WS4_Cars_Static/obj/WS4_Cars_Static.csproj.nuget.cache
 /WS4_Cars_Static/obj/project.assets.json
+/WS5_Cars_Inheritance/bin/Debug/netcoreapp2.1
+/WS5_Cars_Inheritance/obj/Debug/netcoreapp2.1
+/WS5_Cars_Inheritance/obj
